[package]
name = "phragmen-lab"
version = "0.1.0"
edition = "2021"

[dependencies]
# Same crate the runtime uses for seq_phragmen + balancing.
sp-npos-elections = "42.0.0"
sp-arithmetic = "28.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
